# link-coroner

./: .gitignore  .pre-commit-hooks.yaml  PLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
link_coroner/: __init__.py  cache.py  cli.py  diagnosis.py  diff.py  heatmap.py  ignore.py  lsp.py  mcp_server.py  mortician.py  personas.py  rewrite.py  wayback.py
link_coroner/forensics/: probe.py  soft404.py
link_coroner/reporting/: autopsy.py  badge.py  junit_out.py  sarif_out.py  webhook.py
link_coroner/scanner/: extractors.py  site.py  walker.py
tests/: test_autopsy_cli.py  test_badge.py  test_cache.py  test_certificates.py  test_cli.py  test_diagnosis.py  test_diff.py  test_extractors.py  test_heatmap.py  test_ignore.py  test_junit_sarif.py  test_lsp.py  test_mcp_server.py  test_mortician.py  test_personas.py  test_probe.py  test_rewrite.py  test_site_crawl.py  test_soft404.py  test_walker.py  test_wayback.py  test_webhook_digest.py
